<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="protezio.control.MainActivity" >

    <ToggleButton
        android:id="@+id/ToggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="14dp"
        android:layout_marginTop="32dp"
        android:height="60dp"
        android:minHeight="60dp"
        android:minWidth="120dp"
        android:text="@string/k1"
        android:width="120dp" />

    <ToggleButton
        android:id="@+id/ToggleButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ToggleButton1"
        android:layout_marginRight="14dp"
        android:height="60dp"
        android:minHeight="60dp"
        android:minWidth="120dp"
        android:text="@string/k2"
        android:width="120dp" />

    <ToggleButton
        android:id="@+id/ToggleButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ToggleButton2"
        android:layout_marginRight="14dp"
        android:height="60dp"
        android:minHeight="60dp"
        android:minWidth="120dp"
        android:text="@string/k3"
        android:width="120dp" />

    <ToggleButton
        android:id="@+id/ToggleButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ToggleButton3"
        android:layout_marginRight="14dp"
        android:height="60dp"
        android:minHeight="60dp"
        android:minWidth="120dp"
        android:text="@string/k4"
        android:width="120dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ToggleButton1"
        android:layout_alignBottom="@+id/ToggleButton1"
        android:layout_alignParentLeft="true"
        android:text="@string/k1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ToggleButton2"
        android:layout_alignBottom="@+id/ToggleButton2"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/k2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ToggleButton3"
        android:layout_alignBottom="@+id/ToggleButton3"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/k3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/Log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBar1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/seekBar1"
        android:background="@drawable/editbox"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textMultiLine|textNoSuggestions"
        android:paddingTop="10dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:textSize="12sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleButtonLed"
        android:layout_alignBottom="@+id/toggleButtonLed"
        android:text="@string/Led"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/seek_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginLeft="13dp"
        android:layout_toRightOf="@+id/textView5"
        android:text="@string/Led" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButtonLed"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:max="1023"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ToggleButton4"
        android:layout_alignBottom="@+id/ToggleButton4"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/k4"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/toggleButtonLed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/seekBar1"
        android:layout_below="@+id/ToggleButton4"
        android:layout_marginTop="17dp"
        android:text="@string/Led" />

</RelativeLayout>